--- a/index.html
+++ b/index.html
@@ -379,7 +379,7 @@
       }, 10);
     })(document.getElementById("pinkboard"));
   </script>
-  <h2 class="name">Hi I'm Alexx</h2>
+  <h2 class="name">You are ABCDEFGH</h2>
 </body>
 
 </html>   
